# Autonomous-Driving-in-Carla-using-Deep-Reinforcement-Learning

./: LICENSE.md  README.md  carla_driver.py  checkpoint_ddqn.pickle  continuous_driver.py  discrete_driver.py  driver.py  encoder_init.py  learning_data.csv  parameters.py  requirements.txt  serialized_data.pickle  utils.py
.github/: FUNDING.yml
Network/: agent.py  ddqn.py  replay_buffer.py
SimulationClient/: connection.py  environment.py  sensors.py  settings.py
autoencoder/: autoencoder.py  decoder.py  encoder.py  reconstructor.py  vae.py  variational_autoencoder.py
carla/: carla-0.9.8-py3.7-win-amd64.egg
checkpoints/: checkpoint_ppo.pickle
logs/: PPO_carla_log_0.csv
logs/PPO/Town02/: PPO_carla_0.csv  (+4 more)
models/: carla_ddqn_online.pt
models/ddqn/: carla_dueling_dqn_target.pth
networks/off_policy/: replay_buffer.py
plots/: plot.py
poetry/: pyproject.toml
preTrained_models/ppo/: ppo_policy.pth
runs/DDQN/: events.out.tfevents.1667738784.IdreesRazak.33216.0  events.out.tfevents.1667740057.IdreesRazak.35264.0
runs/PPO/: events.out.tfevents.1668148939.IdreesRazak.4688.0  events.out.tfevents.1668181436.IdreesRazak.8588.0
runs/auto-encoder-carla/: events.out.tfevents.1665421240.IdreesRazak.14576.0  events.out.tfevents.1665421264.IdreesRazak.16528.0  events.out.tfevents.1665421412.IdreesRazak.2092.0  events.out.tfevents.1665421780.IdreesRazak.8016.0  events.out.tfevents.1665423494.IdreesRazak.17656.0  events.out.tfevents.1667528232.IdreesRazak.7264.0  (+2 more)
runs/auto-encoder-carla-0.9.08/: events.out.tfevents.1667101020.IdreesRazak.30748.0
simulation/: connection.py  environment.py  sensors.py  settings.py
(+127 files in other folders)
