[tool.poetry]
name = "deep-reinforcement-in-autonomous-driving"
version = "1.0.0"
description = "Deep reinforcement learning in autonomous driving."
authors = ["Asad Idrees Razak <idreesshaikh6300@gmail.com>"]
readme = "README.md"
packages = [{include = "deep_reinforcement_in_autonomous_driving"}]

[tool.poetry.dependencies]
python = "^3.7"
tensorboard = "^2.10.0"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.12.0%2Bcu113-cp37-cp37m-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.0%2Bcu113-cp37-cp37m-win_amd64.whl"} 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
